Adjusted page for exhibition name for user

--- a/loja/app/templates/base.html
+++ b/loja/app/templates/base.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/content.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@300;700&family=Source+Code+Pro&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/75d8c60c74.js" crossorigin="anonymous"></script>
     <title>Lojinha</title>
 </head>
 <body>
     <div>
         <header>
             <div class="app">
-                <img class="img-logo" src="../static/images/Logo.jpg">
                 <nav class="menu">
                     <ul class="container-menu">
-                        <li><a href="about.html">SOBRE</a></li>
-                        <li><a href="skills.html">MASCARAS</a></li>
-                        <li><a href="contact.html">CONTATO</a></li>
+                        <li><a href="/home">HOME</a></li>
+                        <li><a href="/fabric">TECIDOS</a></li>
+                        <li><a href="/contact">CONTATO</a></li>
                         <li><a href="/logout">LOGOUT</a></li>
                     </ul>
                 </nav>
