--- a/loja/app/templates/base.html
+++ b/loja/app/templates/base.html
@@ -18,7 +18,7 @@
                 <nav class="menu">
                     <ul class="container-menu">
                         <li><a href="/home">HOME</a></li>
-                        <li><a href="/fabric">TECIDOS</a></li>
+                        <li><a href="/product">PRODUTOS</a></li>
                         <li><a href="/contact">CONTATO</a></li>
                         <li><a href="/logout">LOGOUT</a></li>
                     </ul>
