Adjusted page login

--- a/loja/app/templates/login.html
+++ b/loja/app/templates/login.html
@@ -37,6 +37,9 @@
                             <strong>{{ message }}</strong>
                         {% endfor %}
                     </div>
+                    <div class="login-visitor">
+                        <a style="color: rgb(52 63 63);" href="visitante/">Entrar como Visitante</a>
+                    </div>
                 </div>
                 <div class="not-account">
                     <div class="create-account">
