Added buttom of chat wpp

--- a/loja/app/templates/fabric.html
+++ b/loja/app/templates/fabric.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@300;700&family=Source+Code+Pro&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{% static 'js/expand.js' %}"></script>
+    <script src="https://kit.fontawesome.com/75d8c60c74.js" crossorigin="anonymous"></script>
     <title>Tecidos</title>
 </head>
 <body>
@@ -44,6 +45,13 @@
                 </div>
             </div>
             {% endfor %}
+            <div class="btn-position">
+                <button class="btn-pedido">
+                    <a style="text-decoration: none;" href="https://wa.me/5581999914057"><i class="fab fa-whatsapp"></i>
+                        Fazer pedido
+                    </a>
+                </button>
+            </div>
         </div>
     </div>
     <footer class="footer-by">
