--- a/loja/app/static/css/page_visitor.css
+++ b/loja/app/static/css/page_visitor.css
@@ -43,7 +43,7 @@ body{
     }
 
     .desc-fabric{
-
+        width: 100px;
     }
 
     .information{
@@ -57,6 +57,19 @@ body{
 
     a{
         font-size: 15px;
+    }
+
+    .btn-pedido{
+        padding: 10px;
+        border-radius: 10px;
+        border: 1px solid rgb(175 175 175);
+        text-transform: uppercase;
+    }
+
+    .btn-pedido{
+        position: absolute;
+        right: 30px;
+        bottom: 70px;
     }
 
 }
@@ -96,6 +109,7 @@ body{
 
     .desc-fabric{
         padding: 10px;
+        width: 200px;
     }
 
     .information{
@@ -110,6 +124,20 @@ body{
     a{
         font-size: 20px;
     }
+
+    .btn-pedido{
+        padding: 10px;
+        border-radius: 10px;
+        border: 1px solid rgb(175 175 175);
+        text-transform: uppercase;
+    }
+
+    .btn-position{
+        position: absolute;
+        right: 200px;
+        bottom: 200px;
+    }
+
 }
 
 
