--- a/loja/app/static/css/page_visitor.css
+++ b/loja/app/static/css/page_visitor.css
@@ -10,11 +10,15 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
+
 /* For Mobile */
-@media screen and (max-device-width: 1024px){
+@media screen and (max-width: 1128px) {
+    .container {
+        padding: 0 0.4em 0 0.4em;
+    }
 
     header{
-        height: 15vh;
+        height: 10vh;
     }
 
     .title-page{
@@ -22,6 +26,70 @@ body{
     }
 
     /* PARTE PARA OS TECIDOS */
+    .fabrics{
+        margin: 5px 5px 2px;
+        padding: 10px 10px;
+    }
+
+    .name-fabric{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    
+    .img-fabric{
+        width: 141px;
+    }
+
+    .ajusted-img{
+        /* margin-left: 12px; */
+    }
+
+    .fabrics_father{
+        /* height: 90vh; */
+        margin-bottom: 50px;
+    }
+
+    .desc-fabric{
+        width: 100px;
+    }
+
+    .information{
+        margin-top: 5px;
+        padding: 20px;
+        text-align: center;
+    }
+
+    .cod-fabric{
+        padding-top: 10px;
+    }
+
+    a{
+        font-size: 15px;
+    }
+
+    .btn-position{
+        position: absolute;
+        right: 15px;
+        bottom: 0px;
+    }
+
+    .tecidos{
+        height: 63em;
+    }
+}
+
+/* For Mobile */
+/* @media screen and (mix-device-width: 1024px){
+
+    header{
+        height: 10vh;
+    }
+
+    .title-page{
+        margin-left: 145px;
+    }
+
+    PARTE PARA OS TECIDOS
     .fabrics{
         margin: 10px 10px 15px;
     }
@@ -34,12 +102,14 @@ body{
     .img-fabric{
         width: 141px;
     }
+
     .ajusted-img{
-        /* margin-left: 12px; */
+        margin-left: 12px;
     }
 
     .fabrics_father{
-        height: 80vh;
+        height: 90vh;
+        margin-bottom: 50px;
     }
 
     .desc-fabric{
@@ -59,20 +129,17 @@ body{
         font-size: 15px;
     }
 
-    .btn-pedido{
-        padding: 10px;
-        border-radius: 10px;
-        border: 1px solid rgb(175 175 175);
-        text-transform: uppercase;
-    }
-
-    .btn-pedido{
+    .btn-position{
         position: absolute;
-        right: 30px;
-        bottom: 70px;
+        right: 15px;
+        bottom: 0px;
     }
 
-}
+    .tecidos{
+        height: 135vh;
+    }
+
+} */
 
 /* For desktop */
 @media screen and (min-device-width: 1024px){
@@ -93,6 +160,7 @@ body{
     /* PARTE PARA OS TECIDOS */
     .fabrics{
         margin: 10px 10px 15px;
+        padding: 20px 12px;
     }
 
     .name-fabric{
@@ -104,7 +172,7 @@ body{
     }
 
     .fabrics_father{
-        height: 75vh;
+        height: 61em;
     }
 
     .desc-fabric{
@@ -125,13 +193,6 @@ body{
         font-size: 20px;
     }
 
-    .btn-pedido{
-        padding: 10px;
-        border-radius: 10px;
-        border: 1px solid rgb(175 175 175);
-        text-transform: uppercase;
-    }
-
     .btn-position{
         position: absolute;
         right: 200px;
@@ -140,6 +201,9 @@ body{
 
 }
 
+.img-fabric{
+    border-radius: 8px;
+}
 
 .header_content{
     border-bottom: 1px solid rgb(226, 226, 226);
@@ -160,7 +224,13 @@ a{
     color: rgb(52 63 63);
 }
 
-
+.btn-pedido{
+    border: 1px solid rgb(255 255 255 / 0%);
+    background-color: #15a3c7;
+    padding: 10px;
+    border-radius: 10px;
+    text-transform: uppercase;
+}
 
 .fabrics{
     background: rgb(248, 248, 248);
@@ -168,16 +238,16 @@ a{
     box-sizing: border-box;
     box-shadow: rgb(0 0 0 / 4%) 0px 2px 8px;
     border-radius: 4px;
-    padding: 20px 12px;
     /* max-width: 1038px; */
     float: left;
 }
 
 .footer-by{
-    padding: 1px;
+    padding: 10px;
     color: rgb(71, 88, 103); 
     text-decoration: none;
-    position:fixed;
+    bottom: 0;
+    position: relative;
     text-align: center;
     width:100%;
     font-size: 13px;
